added dependancy injection and datacontext

--- a/TableReservation/appsettings.json
+++ b/TableReservation/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "SwaggerSettings": {
     "EnableSwagger": true
+  },
+  "GeneralSettings": {
+    "UseInMemoryDb":  true
+  },
+  "ConnectionStrings": {
+    "DefaultConnection" : "Server=localhost;Database=TableService;Trusted_Connection=true"
   }
 }
