fixed security and unit tests

--- a/TableReservation/appsettings.json
+++ b/TableReservation/appsettings.json
@@ -13,6 +13,12 @@
     "UseInMemoryDb":  true
   },
   "ConnectionStrings": {
-    "DefaultConnection" : "Server=localhost;Database=TableService;Trusted_Connection=true"
+    "DefaultConnection": "Server=localhost;Database=TableService;Trusted_Connection=true"
+  },
+  "Security": {
+    "SharedSecret": "12345678123456781234567812345678",
+    "Issuer": "MacewanApi",
+    "Audiance": "MacewanStudents",
+    "ExpireTimeMinutes": 30
   }
 }
